--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -152,11 +152,15 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    vocab = list(set(text))\n",
+    "    from collections import Counter\n",
     "    \n",
-    "    vocab_to_int = {word: i for i,word in enumerate(vocab)}\n",
-    "    int_to_vocab = {i: word for i,word in enumerate(vocab)}\n",
-    "    return vocab_to_int, int_to_vocab\n",
+    "    word_counts = Counter(text)\n",
+    "    sorted_words_list = sorted(word_counts, key=word_counts.get, reverse=True)\n",
+    "    \n",
+    "    word_to_int = {word: i for i, word in enumerate(sorted_words_list)}\n",
+    "    int_to_word = {i: word for word, i in word_to_int.items()}\n",
+    "    \n",
+    "    return word_to_int, int_to_word\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -191,8 +195,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Preprocess all the data and save it\n",
+    "Running the code cell below will preprocess all the data and save it to file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -234,19 +249,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Preprocess all the data and save it\n",
-    "Running the code cell below will preprocess all the data and save it to file."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -313,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -372,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -424,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -474,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -527,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -580,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -610,7 +614,7 @@
     "    embed = get_embed(input_data, vocab_size, embed_dim)\n",
     "    outputs, final_state = build_rnn(cell, embed)\n",
     "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size, activation_fn=None,              \n",
-    "                    weights_initializer=tf.truncated_normal_initializer(stddev= 0.1),\n",
+    "                    weights_initializer=tf.truncated_normal_initializer(stddev=0.1),\n",
     "                    biases_initializer=tf.zeros_initializer())\n",
     "    return logits, final_state\n",
     "\n",
@@ -669,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -735,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -777,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -829,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -840,56 +844,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/16   train_loss = 8.822\n",
-      "Epoch   1 Batch    0/16   train_loss = 6.989\n",
-      "Epoch   2 Batch    0/16   train_loss = 6.329\n",
-      "Epoch   3 Batch    0/16   train_loss = 6.313\n",
-      "Epoch   4 Batch    0/16   train_loss = 6.222\n",
-      "Epoch   5 Batch    0/16   train_loss = 6.239\n",
-      "Epoch   6 Batch    0/16   train_loss = 6.211\n",
-      "Epoch   7 Batch    0/16   train_loss = 6.235\n",
-      "Epoch   8 Batch    0/16   train_loss = 6.217\n",
-      "Epoch   9 Batch    0/16   train_loss = 6.231\n",
-      "Epoch  10 Batch    0/16   train_loss = 6.220\n",
-      "Epoch  11 Batch    0/16   train_loss = 6.230\n",
-      "Epoch  12 Batch    0/16   train_loss = 6.221\n",
-      "Epoch  13 Batch    0/16   train_loss = 6.228\n",
-      "Epoch  14 Batch    0/16   train_loss = 6.222\n",
-      "Epoch  15 Batch    0/16   train_loss = 6.226\n",
-      "Epoch  16 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  17 Batch    0/16   train_loss = 6.225\n",
-      "Epoch  18 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  19 Batch    0/16   train_loss = 6.225\n",
-      "Epoch  20 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  21 Batch    0/16   train_loss = 6.224\n",
-      "Epoch  22 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  23 Batch    0/16   train_loss = 6.224\n",
-      "Epoch  24 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  25 Batch    0/16   train_loss = 6.224\n",
-      "Epoch  26 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  27 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  28 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  29 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  30 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  31 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  32 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  33 Batch    0/16   train_loss = 6.223\n",
-      "Epoch  34 Batch    0/16   train_loss = 6.221\n",
-      "Epoch  35 Batch    0/16   train_loss = 6.213\n",
-      "Epoch  36 Batch    0/16   train_loss = 6.210\n",
-      "Epoch  37 Batch    0/16   train_loss = 6.206\n",
-      "Epoch  38 Batch    0/16   train_loss = 6.205\n",
-      "Epoch  39 Batch    0/16   train_loss = 6.203\n",
-      "Epoch  40 Batch    0/16   train_loss = 6.202\n",
-      "Epoch  41 Batch    0/16   train_loss = 6.201\n",
-      "Epoch  42 Batch    0/16   train_loss = 6.200\n",
-      "Epoch  43 Batch    0/16   train_loss = 6.199\n",
-      "Epoch  44 Batch    0/16   train_loss = 6.198\n",
-      "Epoch  45 Batch    0/16   train_loss = 6.195\n",
-      "Epoch  46 Batch    0/16   train_loss = 6.194\n",
-      "Epoch  47 Batch    0/16   train_loss = 6.194\n",
-      "Epoch  48 Batch    0/16   train_loss = 6.191\n",
-      "Epoch  49 Batch    0/16   train_loss = 6.190\n",
+      "Epoch   0 Batch    0/16   train_loss = 8.826\n",
+      "Epoch   1 Batch    0/16   train_loss = 5.891\n",
+      "Epoch   2 Batch    0/16   train_loss = 5.241\n",
+      "Epoch   3 Batch    0/16   train_loss = 4.880\n",
+      "Epoch   4 Batch    0/16   train_loss = 4.616\n",
+      "Epoch   5 Batch    0/16   train_loss = 4.412\n",
+      "Epoch   6 Batch    0/16   train_loss = 4.208\n",
+      "Epoch   7 Batch    0/16   train_loss = 4.053\n",
+      "Epoch   8 Batch    0/16   train_loss = 3.861\n",
+      "Epoch   9 Batch    0/16   train_loss = 3.674\n",
+      "Epoch  10 Batch    0/16   train_loss = 3.519\n",
+      "Epoch  11 Batch    0/16   train_loss = 3.386\n",
+      "Epoch  12 Batch    0/16   train_loss = 3.152\n",
+      "Epoch  13 Batch    0/16   train_loss = 2.993\n",
+      "Epoch  14 Batch    0/16   train_loss = 2.870\n",
+      "Epoch  15 Batch    0/16   train_loss = 2.655\n",
+      "Epoch  16 Batch    0/16   train_loss = 2.529\n",
+      "Epoch  17 Batch    0/16   train_loss = 2.353\n",
+      "Epoch  18 Batch    0/16   train_loss = 2.248\n",
+      "Epoch  19 Batch    0/16   train_loss = 2.121\n",
+      "Epoch  20 Batch    0/16   train_loss = 2.031\n",
+      "Epoch  21 Batch    0/16   train_loss = 1.963\n",
+      "Epoch  22 Batch    0/16   train_loss = 1.856\n",
+      "Epoch  23 Batch    0/16   train_loss = 1.742\n",
+      "Epoch  24 Batch    0/16   train_loss = 1.660\n",
+      "Epoch  25 Batch    0/16   train_loss = 1.621\n",
+      "Epoch  26 Batch    0/16   train_loss = 1.496\n",
+      "Epoch  27 Batch    0/16   train_loss = 1.497\n",
+      "Epoch  28 Batch    0/16   train_loss = 1.352\n",
+      "Epoch  29 Batch    0/16   train_loss = 1.181\n",
+      "Epoch  30 Batch    0/16   train_loss = 1.091\n",
+      "Epoch  31 Batch    0/16   train_loss = 0.974\n",
+      "Epoch  32 Batch    0/16   train_loss = 0.898\n",
+      "Epoch  33 Batch    0/16   train_loss = 0.813\n",
+      "Epoch  34 Batch    0/16   train_loss = 0.761\n",
+      "Epoch  35 Batch    0/16   train_loss = 0.703\n",
+      "Epoch  36 Batch    0/16   train_loss = 0.663\n",
+      "Epoch  37 Batch    0/16   train_loss = 0.643\n",
+      "Epoch  38 Batch    0/16   train_loss = 0.636\n",
+      "Epoch  39 Batch    0/16   train_loss = 0.597\n",
+      "Epoch  40 Batch    0/16   train_loss = 0.563\n",
+      "Epoch  41 Batch    0/16   train_loss = 0.531\n",
+      "Epoch  42 Batch    0/16   train_loss = 0.490\n",
+      "Epoch  43 Batch    0/16   train_loss = 0.459\n",
+      "Epoch  44 Batch    0/16   train_loss = 0.440\n",
+      "Epoch  45 Batch    0/16   train_loss = 0.414\n",
+      "Epoch  46 Batch    0/16   train_loss = 0.389\n",
+      "Epoch  47 Batch    0/16   train_loss = 0.360\n",
+      "Epoch  48 Batch    0/16   train_loss = 0.340\n",
+      "Epoch  49 Batch    0/16   train_loss = 0.308\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -941,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -968,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1008,13 +1012,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -1023,7 +1035,12 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None, None\n",
+    "    input_tensor = loaded_graph.get_tensor_by_name('input:0')\n",
+    "    initial_state_tensor = loaded_graph.get_tensor_by_name('initial_state:0')\n",
+    "    final_state_tensor = loaded_graph.get_tensor_by_name('final_state:0')\n",
+    "    probs_tensor = loaded_graph.get_tensor_by_name('probs:0')\n",
+    "    return input_tensor, initial_state_tensor, final_state_tensor, probs_tensor\n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1045,13 +1062,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [\"a\", \"b\", \"c\"]\n",
+    "print(np.random.choice(x,1,p=[0.1,0.2,0.7])[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-52-458ebd27a5c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mDON\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0mT\u001b[0m \u001b[0mMODIFY\u001b[0m \u001b[0mANYTHING\u001b[0m \u001b[0mIN\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mCELL\u001b[0m \u001b[0mTHAT\u001b[0m \u001b[0mIS\u001b[0m \u001b[0mBELOW\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mLINE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \"\"\"\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_pick_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpick_word\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/DruidKuma/Desktop/tv-script-generation/problem_unittests.py\u001b[0m in \u001b[0;36mtest_pick_word\u001b[0;34m(pick_word)\u001b[0m\n\u001b[1;32m    298\u001b[0m         \u001b[0mtest_int_to_vocab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mword_i\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'this'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'is'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'a'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    299\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 300\u001b[0;31m         \u001b[0mpred_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpick_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_probabilities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_int_to_vocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    301\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m         \u001b[0;31m# Check type\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-52-458ebd27a5c1>\u001b[0m in \u001b[0;36mpick_word\u001b[0;34m(probabilities, int_to_vocab)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# TODO: Implement Function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint_to_vocab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprobabilities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprobabilities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mmtrand.RandomState.choice (numpy/random/mtrand/mtrand.c:17871)\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -1061,7 +1113,9 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    values = list(int_to_vocab.values())\n",
+    "    print(np.random.choice(values,1,probabilities)[0])\n",
+    "    return np.random.choice(values,1,probabilities)[0]\n",
     "\n",
     "\n",
     "\"\"\"\n",
