Completed generating new Simpsons TV script

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,9 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -61,11 +61,12 @@
       "Dataset Stats\n",
       "Roughly the number of unique words: 11492\n",
       "Number of scenes: 262\n",
-      "Average number of sentences in each scene: 15.248091603053435\n",
-      "Number of lines: 4257\n",
-      "Average number of words in each line: 11.50434578341555\n",
+      "Average number of sentences in each scene: 15.251908396946565\n",
+      "Number of lines: 4258\n",
+      "Average number of words in each line: 11.50164396430249\n",
       "\n",
       "The sentences 0 to 10:\n",
+      "\n",
       "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
       "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
       "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
@@ -74,7 +75,6 @@
       "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
       "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
       "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
-      "\n",
       "\n"
      ]
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -250,9 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -278,9 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -328,14 +328,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n"
+      "TensorFlow Version: 1.0.1\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/DruidKuma/miniconda3/envs/dog-project/lib/python3.5/site-packages/ipykernel/__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "C:\\Users\\IMiedviediev\\AppData\\Local\\Continuum\\Anaconda2\\envs\\deep-learning-nd\\lib\\site-packages\\ipykernel\\__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
      ]
     }
    ],
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -781,9 +781,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -844,56 +844,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/16   train_loss = 8.826\n",
-      "Epoch   1 Batch    0/16   train_loss = 5.891\n",
-      "Epoch   2 Batch    0/16   train_loss = 5.241\n",
-      "Epoch   3 Batch    0/16   train_loss = 4.880\n",
-      "Epoch   4 Batch    0/16   train_loss = 4.616\n",
-      "Epoch   5 Batch    0/16   train_loss = 4.412\n",
-      "Epoch   6 Batch    0/16   train_loss = 4.208\n",
-      "Epoch   7 Batch    0/16   train_loss = 4.053\n",
-      "Epoch   8 Batch    0/16   train_loss = 3.861\n",
-      "Epoch   9 Batch    0/16   train_loss = 3.674\n",
-      "Epoch  10 Batch    0/16   train_loss = 3.519\n",
-      "Epoch  11 Batch    0/16   train_loss = 3.386\n",
-      "Epoch  12 Batch    0/16   train_loss = 3.152\n",
-      "Epoch  13 Batch    0/16   train_loss = 2.993\n",
-      "Epoch  14 Batch    0/16   train_loss = 2.870\n",
-      "Epoch  15 Batch    0/16   train_loss = 2.655\n",
-      "Epoch  16 Batch    0/16   train_loss = 2.529\n",
-      "Epoch  17 Batch    0/16   train_loss = 2.353\n",
-      "Epoch  18 Batch    0/16   train_loss = 2.248\n",
-      "Epoch  19 Batch    0/16   train_loss = 2.121\n",
-      "Epoch  20 Batch    0/16   train_loss = 2.031\n",
-      "Epoch  21 Batch    0/16   train_loss = 1.963\n",
-      "Epoch  22 Batch    0/16   train_loss = 1.856\n",
-      "Epoch  23 Batch    0/16   train_loss = 1.742\n",
-      "Epoch  24 Batch    0/16   train_loss = 1.660\n",
-      "Epoch  25 Batch    0/16   train_loss = 1.621\n",
-      "Epoch  26 Batch    0/16   train_loss = 1.496\n",
-      "Epoch  27 Batch    0/16   train_loss = 1.497\n",
-      "Epoch  28 Batch    0/16   train_loss = 1.352\n",
-      "Epoch  29 Batch    0/16   train_loss = 1.181\n",
-      "Epoch  30 Batch    0/16   train_loss = 1.091\n",
-      "Epoch  31 Batch    0/16   train_loss = 0.974\n",
-      "Epoch  32 Batch    0/16   train_loss = 0.898\n",
-      "Epoch  33 Batch    0/16   train_loss = 0.813\n",
-      "Epoch  34 Batch    0/16   train_loss = 0.761\n",
-      "Epoch  35 Batch    0/16   train_loss = 0.703\n",
-      "Epoch  36 Batch    0/16   train_loss = 0.663\n",
-      "Epoch  37 Batch    0/16   train_loss = 0.643\n",
-      "Epoch  38 Batch    0/16   train_loss = 0.636\n",
-      "Epoch  39 Batch    0/16   train_loss = 0.597\n",
-      "Epoch  40 Batch    0/16   train_loss = 0.563\n",
-      "Epoch  41 Batch    0/16   train_loss = 0.531\n",
-      "Epoch  42 Batch    0/16   train_loss = 0.490\n",
-      "Epoch  43 Batch    0/16   train_loss = 0.459\n",
-      "Epoch  44 Batch    0/16   train_loss = 0.440\n",
-      "Epoch  45 Batch    0/16   train_loss = 0.414\n",
-      "Epoch  46 Batch    0/16   train_loss = 0.389\n",
-      "Epoch  47 Batch    0/16   train_loss = 0.360\n",
-      "Epoch  48 Batch    0/16   train_loss = 0.340\n",
-      "Epoch  49 Batch    0/16   train_loss = 0.308\n",
+      "Epoch   0 Batch    0/16   train_loss = 8.822\n",
+      "Epoch   1 Batch    0/16   train_loss = 5.762\n",
+      "Epoch   2 Batch    0/16   train_loss = 5.128\n",
+      "Epoch   3 Batch    0/16   train_loss = 4.784\n",
+      "Epoch   4 Batch    0/16   train_loss = 4.536\n",
+      "Epoch   5 Batch    0/16   train_loss = 4.330\n",
+      "Epoch   6 Batch    0/16   train_loss = 4.148\n",
+      "Epoch   7 Batch    0/16   train_loss = 3.979\n",
+      "Epoch   8 Batch    0/16   train_loss = 3.787\n",
+      "Epoch   9 Batch    0/16   train_loss = 3.638\n",
+      "Epoch  10 Batch    0/16   train_loss = 3.433\n",
+      "Epoch  11 Batch    0/16   train_loss = 3.262\n",
+      "Epoch  12 Batch    0/16   train_loss = 3.108\n",
+      "Epoch  13 Batch    0/16   train_loss = 2.973\n",
+      "Epoch  14 Batch    0/16   train_loss = 2.794\n",
+      "Epoch  15 Batch    0/16   train_loss = 2.647\n",
+      "Epoch  16 Batch    0/16   train_loss = 2.425\n",
+      "Epoch  17 Batch    0/16   train_loss = 2.307\n",
+      "Epoch  18 Batch    0/16   train_loss = 2.171\n",
+      "Epoch  19 Batch    0/16   train_loss = 2.080\n",
+      "Epoch  20 Batch    0/16   train_loss = 1.934\n",
+      "Epoch  21 Batch    0/16   train_loss = 1.836\n",
+      "Epoch  22 Batch    0/16   train_loss = 1.715\n",
+      "Epoch  23 Batch    0/16   train_loss = 1.624\n",
+      "Epoch  24 Batch    0/16   train_loss = 1.549\n",
+      "Epoch  25 Batch    0/16   train_loss = 1.443\n",
+      "Epoch  26 Batch    0/16   train_loss = 1.388\n",
+      "Epoch  27 Batch    0/16   train_loss = 1.299\n",
+      "Epoch  28 Batch    0/16   train_loss = 1.222\n",
+      "Epoch  29 Batch    0/16   train_loss = 1.139\n",
+      "Epoch  30 Batch    0/16   train_loss = 1.066\n",
+      "Epoch  31 Batch    0/16   train_loss = 1.006\n",
+      "Epoch  32 Batch    0/16   train_loss = 0.933\n",
+      "Epoch  33 Batch    0/16   train_loss = 0.894\n",
+      "Epoch  34 Batch    0/16   train_loss = 0.812\n",
+      "Epoch  35 Batch    0/16   train_loss = 0.781\n",
+      "Epoch  36 Batch    0/16   train_loss = 0.710\n",
+      "Epoch  37 Batch    0/16   train_loss = 0.680\n",
+      "Epoch  38 Batch    0/16   train_loss = 0.644\n",
+      "Epoch  39 Batch    0/16   train_loss = 0.621\n",
+      "Epoch  40 Batch    0/16   train_loss = 0.606\n",
+      "Epoch  41 Batch    0/16   train_loss = 0.566\n",
+      "Epoch  42 Batch    0/16   train_loss = 0.516\n",
+      "Epoch  43 Batch    0/16   train_loss = 0.482\n",
+      "Epoch  44 Batch    0/16   train_loss = 0.442\n",
+      "Epoch  45 Batch    0/16   train_loss = 0.406\n",
+      "Epoch  46 Batch    0/16   train_loss = 0.373\n",
+      "Epoch  47 Batch    0/16   train_loss = 0.333\n",
+      "Epoch  48 Batch    0/16   train_loss = 0.319\n",
+      "Epoch  49 Batch    0/16   train_loss = 0.307\n",
       "Model Trained and Saved\n"
      ]
     }
@@ -945,9 +945,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -972,9 +972,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1062,27 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = [\"a\", \"b\", \"c\"]\n",
-    "print(np.random.choice(x,1,p=[0.1,0.2,0.7])[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1090,17 +1070,10 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-458ebd27a5c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mDON\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0mT\u001b[0m \u001b[0mMODIFY\u001b[0m \u001b[0mANYTHING\u001b[0m \u001b[0mIN\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mCELL\u001b[0m \u001b[0mTHAT\u001b[0m \u001b[0mIS\u001b[0m \u001b[0mBELOW\u001b[0m \u001b[0mTHIS\u001b[0m \u001b[0mLINE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \"\"\"\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_pick_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpick_word\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/DruidKuma/Desktop/tv-script-generation/problem_unittests.py\u001b[0m in \u001b[0;36mtest_pick_word\u001b[0;34m(pick_word)\u001b[0m\n\u001b[1;32m    298\u001b[0m         \u001b[0mtest_int_to_vocab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mword_i\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword_i\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'this'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'is'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'a'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    299\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 300\u001b[0;31m         \u001b[0mpred_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpick_word\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_probabilities\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_int_to_vocab\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    301\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    302\u001b[0m         \u001b[0;31m# Check type\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-52-458ebd27a5c1>\u001b[0m in \u001b[0;36mpick_word\u001b[0;34m(probabilities, int_to_vocab)\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# TODO: Implement Function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint_to_vocab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprobabilities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mprobabilities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mmtrand.RandomState.choice (numpy/random/mtrand/mtrand.c:17871)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
      ]
     }
    ],
@@ -1113,9 +1086,7 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    values = list(int_to_vocab.values())\n",
-    "    print(np.random.choice(values,1,probabilities)[0])\n",
-    "    return np.random.choice(values,1,probabilities)[0]\n",
+    "    return np.random.choice(list(int_to_vocab.values()), 1, p=probabilities)[0]\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1137,13 +1108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "moe_szyslak: naturally o' fat(frink-y) / hang, his friend!\n",
+      "carl_carlson: yep,\" renee, with your daughter found?\n",
+      "moe_szyslak: yeah. how can i put this delicately? i don't got nothin'?\n",
+      "lenny_leonard: burns sure about a man i did, you man make me like a man.\n",
+      "homer_simpson: what's the gag?\n",
+      "bart_simpson:(exasperated noise) what the hell could declan?!\n",
+      "barney_gumble: you know, i used to wonder why i'm supposed to help you advice had to go straight to ya.\n",
+      "ken: this place for blue of three.\n",
+      "moe_szyslak:(sighs) so, uh, you gonna be okay. i'm a gargoyle. what?\n",
+      "barney_gumble:(reading) jane in.\n",
+      "moe_szyslak:(amid curious sincere) what's the mob is they say from new taking life, but i have a\" gas i want to do.\n",
+      "homer_simpson: oh-ho, i learn this better of your stealings!\n",
+      "moe_szyslak: homer, can you hide the boy, carl? maybe i ain't allowed back in the game.(\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
@@ -1206,6 +1197,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -1229,5 +1221,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
